# artiq_ft

./: .gitignore  Cargo.toml  README.md  cargo-xbuild.nix  default.nix  demo.json  flake.nix  fsbl.elf  fsbl.nix  fsbl.patch  gnutoolchain.nix  kasli-soc-master.json  kasli-soc-satellite.json  local_run.sh  mkbootimage.nix  mozilla-overlay.nix  remote_run.sh  result  rustPlatform.nix  shell.nix  xbuild.nix  xbuild.patch  zc706.py  zynq-rs.nix
examples/: blink_forever.py  device_db.py  dma.py  exception.py  ft.py  ft_device_db.py  ft_service.py  ft_service_client.py
examples/dash/: device_db.py
examples/dash/repository/: presets.py  quick_presets.py  urukul_dashboard.py  urukul_simple.py
examples/dash/results/2025-09-19/10/: 000000000-UrukulDashboard.h5  000000001-UrukulDashboard.h5  000000002-UrukulDashboard.h5  000000003-UrukulDashboard.h5  000000004-UrukulDashboard.h5  000000005-UrukulDashboard.h5  000000006-UrukulDashboard.h5  000000007-UrukulDashboard.h5  000000008-UrukulDashboard.h5  000000009-UrukulDashboard.h5  000000010-UrukulDashboard.h5  000000011-UrukulSimple.h5  000000012-UrukulDashboard.h5  000000013-UrukulDashboard.h5  000000014-UrukulDashboard.h5  000000015-UrukulDashboard.h5  000000016-UrukulDashboard.h5  000000017-UrukulDashboard.h5  000000018-UrukulDashboard.h5
examples/dash/results/2025-09-19/11/: 000000019-UrukulSimple.h5  000000020-UrukulSimple.h5  000000021-UrukulSimple.h5  000000022-SetDDS.h5  000000023-ToggleDDS.h5  000000024-SetDDS.h5  000000025-ToggleDDS.h5  000000026-ToggleDDS.h5  000000027-ToggleDDS.h5  000000028-ToggleDDS.h5  000000029-ToggleDDS.h5  000000030-SetDDS.h5  000000031-ToggleDDS.h5  000000032-ToggleDDS.h5  000000033-ToggleDDS.h5  000000034-ToggleDDS.h5  000000035-SetDDS.h5  000000036-UrukulDashboard.h5  000000037-UrukulDashboard.h5  000000038-UrukulDashboard.h5  000000039-UrukulDashboard.h5  000000040-UrukulDashboard.h5
examples/ft_server_clients/: ft_service_1.py  ft_service_2.py  ft_service_20ms.py  ft_service_50ms.py  ft_service_client_fast.py  ft_service_client_running.py  ft_service_running.py
examples/old/: actual_led_test.py  ad9914_test.py  basic_led_test.py  blink_forever.py  correct_device_db.py  dataset_db.mdb-lock  dds_100mhz_stable.py  dds_150mhz_verify.py  dds_continuous_output.py  dds_diagnostic.py  dds_force_100mhz.py  dds_full_diagnostic.py  demo_channels_db.py  device_db.py  device_scanner.py  direct_spi_test.py  direct_ttl_test.py  dma.py  final_dds_test.py  find_user_leds.py  ft_1.py  ft_device_db_1.py  kasli_device_db.py  led_finder.py  mandelbrot.py  minimal_device_db.py  minimal_rf_output.py  mirny_basic_test.py  quick_150mhz_test.py  quick_fix_db.py  real_dds_test.py  rf_test.py  simple_150mhz_test.py  simple_blink_test.py  simple_device_db.py  simple_rf_test.py  simple_spi_test.py  spi_dds_test.py  switch_control_test.py  switch_test.py  (+4 more)
firmware/: cargosha256.nix
firmware/.cargo/: config
firmware/libdyld/: Cargo.toml
firmware/libdyld/src/: image.rs  reloc.rs
firmware/runtime/src/: kernel.rs  moninj.rs
firmware/szl/: build.rs
firmware/szl/src/: main.rs  unlzma.c
libdyld/: Cargo.toml
libdyld/src/: elf.rs  file.rs  image.rs  lib.rs
openocd/: digilent_jtag_smt2_nc.cfg  ps7_init.tcl  xilinx-tcl.cfg  zc706.cfg  zynq-7000.cfg
runtime/: Cargo.toml  link.x
runtime/src/: comms.rs  control.rs  kernel.rs  main.rs  moninj.rs  network.rs  proto.rs  rtio.rs
src/: Cargo.toml  Makefile  armv7-none-eabihf.json  rustfmt.toml  zc706.py
src/gateware/: acpki.py  analyzer.py  config.py  coraz7.py  ddmtd.py  dma.py  drtio_aux_controller.py  endianness.py  kasli_soc.py  kasli_soc_generic.py  redpitaya.py  test_dma.py  wrpll.py  zc706.py  zynq_clocking.py
src/include/: printf.h  stdio.h
src/libboard_artiq/: Cargo.toml  Cargo.toml.tpl  build.rs
src/libboard_artiq/src/: drtio_eem.rs  drtio_routing.rs  drtioaux.rs  drtioaux_async.rs  drtioaux_proto.rs  fiq.rs  grabber.rs  io_expander.rs  lib.rs  logger.rs  si5324.rs  si549.rs
src/libbuild_zynq/: Cargo.toml  lib.rs  link.x
src/libc/: Cargo.toml  Cargo.toml.tpl  build.rs
src/libc/src/: lib.rs  printf.c
src/libconfig/: Cargo.toml
src/libconfig/src/: bootgen.rs  lib.rs  load_pl.rs  net_settings.rs  sd_reader.rs
src/libcoreio/: Cargo.toml
src/libcoreio/src/: lib.rs
src/libcoreio/src/io/: mod.rs
src/libdwarf/: Cargo.toml
src/libdwarf/src/: eh.rs  lib.rs
src/libdyld/: Cargo.toml  Cargo.toml.tpl
src/libdyld/src/: elf.rs  file.rs  image.rs  lib.rs  reloc.rs
src/libio/: Cargo.toml  Cargo.toml.tpl  cursor.rs  lib.rs  proto.rs
src/libio/src/: cursor.rs  lib.rs  proto.rs
src/libkernel/: Cargo.toml
src/libkernel/src/: lib.rs  rpc.rs  rtio_acp.rs  rtio_csr.rs
src/libkernel/src/kernel/: api.rs  control.rs  mod.rs  rpc.rs  subkernel.rs
src/libksupport/: Cargo.toml  Cargo.toml.tpl
src/libksupport/src/: eh_artiq.rs  i2c.rs  lib.rs  rpc.rs  rtio_acp.rs  rtio_csr.rs
src/libksupport/src/kernel/: api.rs  control.rs  core1.rs  dma.rs  i2c.rs  mod.rs  rpc.rs  rtio_acp.rs  rtio_csr.rs  subkernel.rs
src/libunwind/: Cargo.toml  backtrace.rs  build.rs  lib.rs  libunwind.rs
src/llvm_libunwind/include/: unwind.h
src/llvm_libunwind/src/: AddressSpace.hpp  Unwind-EHABI.cpp
src/runtime/: Cargo.toml  Cargo.toml.tpl  build.rs  link.x
src/runtime/src/: analyzer.rs  comms.rs  config.rs  eh_artiq.rs  i2c.rs  io_expander.rs  irq.rs  kernel.rs  load_pl.rs  logger.rs  main.rs  mgmt.rs  moninj.rs  net_settings.rs  panic.rs  proto.rs  proto_async.rs  proto_core_io.rs  proto_mgmt.rs  rpc.rs  rpc_async.rs  rtio.rs  rtio_acp.rs  rtio_clocking.rs  rtio_csr.rs  rtio_dma.rs  rtio_mgt.rs  sd_reader.rs  si5324.rs  subkernel.rs
src/runtime/src/kernel/: api.rs  cache.rs  control.rs  core1.rs  dma.rs  mod.rs  rpc.rs  subkernel.rs
src/satman/: Cargo.toml  Cargo.toml.tpl  build.rs
src/satman/src/: analyzer.rs  dma.rs  main.rs  repeater.rs  routing.rs  subkernel.rs
src/szl/: Cargo.toml  build.rs  link.x
src/szl/src/: main.rs  netboot.rs
szl/: Cargo.toml  build.rs  link.x
szl/src/: main.rs
