[workspace]
members = [
  "libc",
  "libdyld",
  "libdwarf",
  "libunwind",
  "runtime",
]

[profile.release]
panic = "abort"
debug = true
codegen-units = 1
opt-level = 2
lto = true

[patch.crates-io]
core_io = { git = "https://git.m-labs.hk/M-Labs/zynq-rs.git" }
compiler_builtins = { git = "https://git.m-labs.hk/M-Labs/compiler-builtins-zynq.git"}
