[package]
name = "libc"
version = "0.1.0"
authors = ["pca006132 <john.lck40@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libboard_zynq = { git = "https://git.m-labs.hk/M-Labs/zc706.git" }

[build-dependencies]
cc = { version = "1.0.1" }
