[package]
authors = ["M-Labs"]
name = "io"
version = "0.0.0"

[lib]
name = "io"
path = "lib.rs"

[dependencies]
core_io = { version = "0.1", features = ["collections"] }
byteorder = { version = "1.0", default-features = false, optional = true }

libsupport_zynq = { default-features = false, features = ["alloc_core"], git = "https://git.m-labs.hk/M-Labs/zynq-rs.git" }

[features]
alloc = []
