[package]
authors = ["The Rust Project Developers"]
name = "unwind"
version = "0.0.0"
build = "build.rs"
edition = "2018"
include = [
  '/libunwind/*',
]

[lib]
name = "unwind"
path = "lib.rs"
test = false
bench = false
doc = false

[dependencies]
compiler_builtins = "0.1.0"
cfg-if = "0.1.8"
libc = { path = "../libc" }

[build-dependencies]
cc = { version = "1.0.1" }

[features]
llvm-libunwind = []
